--- a/Abstract.tex
+++ b/Abstract.tex
@@ -9,4 +9,4 @@ Hier gibt es zwei grundverschiedene Ansätze. Einerseits kann hier rein mathemat
 An dieser Stelle setzt die vorliegende Bachelorarbeit an, sie soll die beiden Methoden und mögliche Mischformen vergleichen.
 
 
-Dazu werden im praktischen Teil der Arbeit, diese Methoden in die Spiele- und Simulations-Engine Fusee\footnote{http://fusee3d.org/} implementiert. Dadurch soll eine objektive Bewertung anhand von numerischen Leistungsvergleichen möglich sein.
+Dazu werden im praktischen Teil der Arbeit, diese Methoden in die Spiele- und Simulations-Engine Fusee\footnote{http://fusee3d.org/} implementiert. Dadurch soll eine objektive Bewertung anhand von numerischen Leistungsvergleichen möglich sein. \cite{Gregory.2010}
