--- a/Options.tex
+++ b/Options.tex
@@ -16,7 +16,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Encoding, fonts, etc...
-\usepackage[ngerman, english]{babel}			% German
+\usepackage[ngerman]{babel}			% German
 \usepackage[utf8]{inputenc}			% Files are UTF-8 encoded
 \usepackage[T1]{fontenc}			% Font encoding
 \usepackage{lmodern}				% Scalable font
