--- a/Title.tex
+++ b/Title.tex
@@ -1,3 +1,4 @@
+\begin{titlepage}
 \begin{center}
 
 \Huge
@@ -26,4 +27,4 @@ Version 1\\
 Stand: \today
 
 \end{center}
-\clearpage
+\end{titlepage}
