--- a/Einleitung_Fragestellung.tex
+++ b/Einleitung_Fragestellung.tex
@@ -2,4 +2,11 @@
 
 \subsection{Übersicht}
 
-\subsection{Fragestellung}
+Aktuelle 3D-Grafik-Engines oder auch Spiele-Engines, zum Beispiel \nameref{sec:unity}, Unreal Engine oder CryEngine bieten Spiele-Entwicklern eine grafische Oberfläche (Editor). Im Vergleich zu 3D-Grafiksoftware wie \nameref{sec:c4d} oder 3D Studio MAX, bieten sie allerdings nur sehr beschränkte Möglichkeiten 3D-Objekte zu modellieren/erstellen \cite{Gregory.2014}[S.54]. Das heißt auch, dass je nach dem welche Kombination an 3D-Grafik-Engine und 3D-Grafiksoftware verwendet wird eine Schnittstelle geschaffen werden muss um die Daten (zum Beispiel Geometrie, Texturen, Materialien und Animationen) auszutauschen. \todo{OpenGEX}.
+
+Diese Editoren bieten meist auch eine direkte Schnittstelle zur Programmierung indem Programmcode mit 3D-Objekten verknüpft werden kann.
+
+
+\subsection{Aufgabe/Fragestellung}
+
+In diesem 
