--- a/Options.tex
+++ b/Options.tex
@@ -60,6 +60,7 @@
 \usepackage{url}
 \usepackage[babel,
 			german=guillemets]{csquotes}
+\usepackage{nameref}
 \usepackage[plainpages=false]{hyperref}
 \usepackage[all]{hypcap}
 
