--- a/bibliography.bib
+++ b/bibliography.bib
@@ -9,13 +9,24 @@
  isbn = {978-1-56881-413-1}
 }
 
-@misc{Weisstein,
- abstract = {Roundoff error is the difference between an approximation of a number used in computation and its exact (correct) value. In certain types of computation, roundoff error can be magnified as any initial errors are carried through one or more intermediate steps. An egregious example of roundoff error is provided by a short-lived index devised at the Vancouver stock exchange (McCullough and Vinod 1999). At its inception in 1982, the index was given a value of 1000.000. After 22 months of...},
- author = {Weisstein, Eric W.},
- title = {Roundoff Error: From MathWorld - A Wolfram Web Resource},
- url = {http://mathworld.wolfram.com/RoundoffError.html},
- keywords = {Mathematics:Number Theory:Rounding},
- urldate = {2014-06-27}
+@book{Gregory.2014,
+ abstract = {{\dq}A 2010 CHOICE outstanding academic title, this updated book covers the theory and practice of game engine software development. It explains practical concepts and techniques used by real game studios, such as Electronic Arts and Naughty Dog. Suitable for both beginners and seasoned engineers, the text includes all the required mathematical background. Examples are grounded in specific technologies, but the discussions extend beyond any particular engine or API. This edition adds new material, including a chapter on audio{\dq}--},
+ author = {Gregory, Jason and Lemarchand, Richard},
+ year = {2014},
+ title = {Game engine architecture},
+ keywords = {Computer games;Programming;Computer programs;Software architecture;Design;Computerspiel;Softwareentwicklung;Computer architecture},
+ address = {Boca Raton, Fla.},
+ edition = {2. ed.},
+ publisher = {{CRC Press}},
+ isbn = {9781466560017}
+}
+
+@unpublished{Schey.2014,
+ author = {Schey, Linda},
+ year = {2014},
+ title = {Einbindung einer Physik-Engine in FUSEE},
+ address = {Furtwangen im Schwarzwald},
+ note = {Bachelor-Thesis, Hochschule Furtwangen University, Fakult{\"a}t Digitale Medien}
 }
 
 @book{Bender.2006,
@@ -33,7 +44,7 @@
  abstract = {EUROGRAPHICS 2014, CGF Vol 33, No 2},
  author = {M{\"u}ller, Christoph and G{\"a}rtner, Fabian},
  title = {Student Project -- Portable Real-Time 3D Engine},
- url = {http://fusee3d.org/wp-content/uploads/2014/04/FUSEE\_Educational.pdf},
+ url = {http://fusee3d.org/wp-content/uploads/2014/04/FUSEE_Educational.pdf},
  keywords = {Computer Graphics Forum;EUROGRAPHICS},
  urldate = {2014-06-27},
  pages = {37--38},
