--- a/Title.tex
+++ b/Title.tex
@@ -2,26 +2,33 @@
 \begin{center}
 
 \Huge
-Expos\'{e}\\[24pt]
-
+Expos\'{e}\\[-8pt]
+\noindent\rule{13.4cm}{0.4pt}\\
 \huge
-\todo{Hier sollte ein Titel stehen!}\\[24pt]
-
-\LARGE
-\todo{Wissenschaftliches Arbeiten und Schreiben}\\[24pt]
-
-\large
-Hochschule Furtwangen University\\
-Fakultät Digitale Medien\\
-Studiengang Medieninformatik Master\\
-Wintersemester 2014/15\\[24pt]
+CINEMA 4D als grafischer Editor mit Scriptunterstützung für Fusee\\[-16pt]
+\noindent\rule{13.4cm}{0.4pt}\\[24pt]
 
 \normalsize
 Alexander Scheurer\\
 Baumannstraße 37\\
 78120 Furtwangen\\[12pt]
 alexander.scheurer@hs-furtwangen.de\\
-Matr.-Nr. 248073\\[24pt]
+Matr.-Nr. 248073\\[16pt]
+
+\noindent\rule{9cm}{0.4pt}\\
+
+
+\large
+Hochschule Furtwangen University\\
+Fakultät Digitale Medien\\
+Studiengang Medieninformatik Master\\[-8pt]
+\noindent\rule{9cm}{0.4pt}\\
+
+Forschungsseminar/Wissenschaftliches Arbeiten\\
+Prof. Dr. Oliver Ruf\\[-8pt]
+\noindent\rule{9cm}{0.4pt}\\
+Wintersemester 2014/15\\[60pt]
+
 
 Version 1\\
 Stand: \today
