--- a/Wissenschaftliche_Einordnung.tex
+++ b/Wissenschaftliche_Einordnung.tex
@@ -1,1 +1,9 @@
 \section{Wissenschaftliche Einordung}
+
+\subsection{Wissenschaftsgebiet}
+Im Hauptteil der Arbeit soll eine Software erweitert werden um die Anbindung an eine zweite Software, dies ist eine überwiegend praktische Ausrichtung und gehört damit ins Feld der praktischen Informatik, genauer der Softwaretechnik.
+
+\subsection{Stand der Forschung}
+Im Bereich der Softwaretechnik allgemein ist es nichts Neues, dass Software auch über die Grenzen von Programmiersprachen hinweg miteinander interagiert. Dies kann zum Beispiel Textverarbeitungssoftware sein, die mit einer Spracherkennungssoftware erweitert wird oder Virtualisierungssoftware die es ermöglicht ganze Betriebssysteme miteinander zu verbinden.
+
+In diesem sehr speziellen Bereich der 3D-Computergrafik waren jedoch keine Beispiele zu finden.
