--- a/Zeitplan.tex
+++ b/Zeitplan.tex
@@ -1,9 +1,9 @@
 \section{Zeitplan}
 
 \begin{itemize}
-\item März - Literaturrecherche und Auseinandersetzung mit dem Thema
-\item April - Prototyping der Implementierung und Dokumentation
-\item Mai - Fertigstellung der Implementierung und Dokumentation
-\item Juni - Performancetests, Optimierungen und Auswertung
-\item Juli-August - Fertigstellung der Arbeit
+\item 1 Monat - Literaturrecherche und Auseinandersetzung mit dem Thema
+\item 1 Monat - Prototyping der Implementierung
+\item 2 Monate - Fertigstellung der Implementierung
+\item 1 Monat - Performancetests, Optimierungen und Auswertung
+\item 1 Monat - Fertigstellung der Arbeit
 \end{itemize}
