--- a/bibliography.bib
+++ b/bibliography.bib
@@ -55,6 +55,87 @@
  address = {Strasbourg, France}
 }
 
+@book{Forbrig.2006,
+ year = {2006},
+ title = {Programmierung: Paradigmen und Konzepte},
+ url = {http://deposit.ddb.de/cgi-bin/dokserv?id=2618111&prov=M&dok_var=1&dok_ext=htm},
+ price = {ca. EUR 29.90, ca. EUR 30.80 (AT)},
+ keywords = {Programmierung;Lehrbuch},
+ address = {M{\"u}nchen},
+ publisher = {{Fachbuchverl. Leipzig}},
+ isbn = {9783446403017},
+ series = {Lehr- und {\"U}bungsbuch Informatik},
+ editor = {Forbrig, Peter and Kerner, Immo O. and Cleve, J{\"u}rgen}
+}
+
+% This file was created with Citavi 4.5.0.11
+
+@book{Buschmann.c2007,
+ author = {Buschmann, Frank and Henney, Kevlin and Schmidt, Douglas C.},
+ year = {c2007},
+ title = {Pattern-oriented software architecture, Volume 5, On patterns and pattern languages},
+ url = {http://proquest.tech.safaribooksonline.de/9780471486480},
+ address = {Chichester, England},
+ publisher = {{J. Wiley}},
+ isbn = {0-471-48648-5},
+ series = {Wiley series in software design patterns}
+}
+
+
+@book{Gamma.2004,
+ author = {Gamma, Erich and Riehle, Dirk},
+ year = {2004},
+ title = {Entwurfsmuster: Elemente wiederverwendbarer objektorientierter Software},
+ keywords = {Entwurfsmuster;Softwareentwicklung;Objektorientierte Programmierung;Softwarewiederverwendung},
+ address = {M{\"u}nchen},
+ publisher = {Addison-Wesley},
+ isbn = {3-8273-2199-9},
+ series = {Programmer's choice}
+}
+
+% This file was created with Citavi 4.5.0.11
+
+@misc{Lengyel.2014,
+ author = {Lengyel, Eric},
+ editor = {{Terathon Software LLC}},
+ year = {2014},
+ title = {Open Game Engine Exchange Specification: Version 1.1.2},
+ url = {http://opengex.org/OpenGEX.1.1.2.pdf},
+ address = {Roseville, California},
+ urldate = {2015-02-06}
+}
+
+% This file was created with Citavi 4.5.0.11
+
+@book{Balzert.2001,
+ author = {Balzert, Helmut},
+ year = {2001},
+ title = {Lehrbuch der Software-Technik},
+ address = {Heidelberg and Berlin},
+ edition = {2. Aufl.},
+ publisher = {{Spektrum Akad. Verl}},
+ isbn = {3-8274-0480-0}
+}
+
+% This file was created with Citavi 4.5.0.11
+
+@book{Loeliger.2012,
+ author = {Loeliger, Jon and McCullough, Matthew},
+ year = {2012},
+ title = {Version control with Git: [powerful tools and techniques for collaborative software development]},
+ keywords = {Computer software;Development;Open source software;Git;Versionsverwaltung;Git (Computer file);Software Engineering},
+ address = {Beijing},
+ edition = {2. ed., covers GitHub},
+ publisher = {O'Reilly},
+ isbn = {9781449316389}
+}
+
+
+
+
+
+
+
 
 
 
